// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PendingChangesActor Snapshots > ask mode > renders accepted file 1`] = `
"<div id="pending-X" class="pending-changes-wrapper anim-bubble-in" data-actor="pending">
      <div class="pending-container expanded">
        <div class="pending-header">
          <span class="pending-icon">▶</span>
          <span class="pending-title">Pending Changes</span>
          <span class="pending-count">1</span>
        </div>
        <div class="pending-body">
          
      <div class="pending-item" id="pending-X" data-status="applied" data-superseded="false">
        <span class="pending-status applied">✓</span>
        <span class="pending-file no-click" title="/src/file.ts">file.ts</span>
        <span class="pending-label applied">Accepted</span>
      </div>
    
        </div>
      </div>
    </div>"
`;

exports[`PendingChangesActor Snapshots > ask mode > renders multiple pending files 1`] = `
"<div id="pending-X" class="pending-changes-wrapper anim-bubble-in" data-actor="pending">
      <div class="pending-container expanded">
        <div class="pending-header">
          <span class="pending-icon">▶</span>
          <span class="pending-title">Pending Changes</span>
          <span class="pending-count">3</span>
        </div>
        <div class="pending-body">
          
      <div class="pending-item" id="pending-X" data-status="pending" data-superseded="false">
        <span class="pending-status pending">●</span>
        <span class="pending-file" title="/src/index.ts">index.ts</span>
        
        <div class="pending-actions">
          <button class="pending-btn accept-btn" title="Accept changes">✓</button>
          <button class="pending-btn reject-btn" title="Reject changes">✕</button>
        </div>
      
      </div>
    
      <div class="pending-item" id="pending-X" data-status="pending" data-superseded="false">
        <span class="pending-status pending">●</span>
        <span class="pending-file" title="/src/components/Header.tsx">Header.tsx</span>
        
        <div class="pending-actions">
          <button class="pending-btn accept-btn" title="Accept changes">✓</button>
          <button class="pending-btn reject-btn" title="Reject changes">✕</button>
        </div>
      
      </div>
    
      <div class="pending-item" id="pending-X" data-status="pending" data-superseded="false">
        <span class="pending-status pending">●</span>
        <span class="pending-file" title="/src/utils/helpers.ts">helpers.ts</span>
        
        <div class="pending-actions">
          <button class="pending-btn accept-btn" title="Accept changes">✓</button>
          <button class="pending-btn reject-btn" title="Reject changes">✕</button>
        </div>
      
      </div>
    
        </div>
      </div>
    </div>"
`;

exports[`PendingChangesActor Snapshots > ask mode > renders rejected file 1`] = `
"<div id="pending-X" class="pending-changes-wrapper anim-bubble-in" data-actor="pending">
      <div class="pending-container expanded">
        <div class="pending-header">
          <span class="pending-icon">▶</span>
          <span class="pending-title">Pending Changes</span>
          <span class="pending-count">1</span>
        </div>
        <div class="pending-body">
          
      <div class="pending-item" id="pending-X" data-status="rejected" data-superseded="false">
        <span class="pending-status rejected">✗</span>
        <span class="pending-file no-click" title="/src/file.ts">file.ts</span>
        <span class="pending-label rejected">Rejected</span>
      </div>
    
        </div>
      </div>
    </div>"
`;

exports[`PendingChangesActor Snapshots > ask mode > renders single pending file 1`] = `
"<div id="pending-X" class="pending-changes-wrapper anim-bubble-in" data-actor="pending">
      <div class="pending-container expanded">
        <div class="pending-header">
          <span class="pending-icon">▶</span>
          <span class="pending-title">Pending Changes</span>
          <span class="pending-count">1</span>
        </div>
        <div class="pending-body">
          
      <div class="pending-item" id="pending-X" data-status="pending" data-superseded="false">
        <span class="pending-status pending">●</span>
        <span class="pending-file" title="/src/components/Button.tsx">Button.tsx</span>
        
        <div class="pending-actions">
          <button class="pending-btn accept-btn" title="Accept changes">✓</button>
          <button class="pending-btn reject-btn" title="Reject changes">✕</button>
        </div>
      
      </div>
    
        </div>
      </div>
    </div>"
`;

exports[`PendingChangesActor Snapshots > ask mode > renders superseded file 1`] = `
"<div id="pending-X" class="pending-changes-wrapper anim-bubble-in" data-actor="pending">
      <div class="pending-container expanded">
        <div class="pending-header">
          <span class="pending-icon">▶</span>
          <span class="pending-title">Pending Changes</span>
          <span class="pending-count">2</span>
        </div>
        <div class="pending-body">
          
      <div class="pending-item" id="pending-X" data-status="pending" data-superseded="true">
        <span class="pending-status superseded">⊘</span>
        <span class="pending-file no-click" title="/src/file.ts">file.ts</span>
        <span class="pending-label superseded">Superseded</span>
      </div>
    
      <div class="pending-item" id="pending-X" data-status="pending" data-superseded="false">
        <span class="pending-status pending">●</span>
        <span class="pending-file" title="/src/file.ts">file.ts (2)</span>
        
        <div class="pending-actions">
          <button class="pending-btn accept-btn" title="Accept changes">✓</button>
          <button class="pending-btn reject-btn" title="Reject changes">✕</button>
        </div>
      
      </div>
    
        </div>
      </div>
    </div>"
`;

exports[`PendingChangesActor Snapshots > auto mode > renders auto-applied files 1`] = `
"<div id="pending-X" class="pending-changes-wrapper anim-bubble-in" data-actor="pending">
      <div class="pending-container expanded auto-mode">
        <div class="pending-header">
          <span class="pending-icon">▶</span>
          <span class="pending-title">Modified Files</span>
          <span class="pending-count">2</span>
        </div>
        <div class="pending-body">
          
      <div class="pending-item" id="pending-X" data-status="applied" data-superseded="false">
        <span class="pending-status applied">✓</span>
        <span class="pending-file no-click" title="/src/file.ts">file.ts</span>
        <span class="pending-label auto">Auto Applied</span>
      </div>
    
      <div class="pending-item" id="pending-X" data-status="applied" data-superseded="false">
        <span class="pending-status applied">✓</span>
        <span class="pending-file no-click" title="/src/other.ts">other.ts</span>
        <span class="pending-label auto">Auto Applied</span>
      </div>
    
        </div>
      </div>
    </div>"
`;

exports[`PendingChangesActor Snapshots > collapsed state > renders collapsed dropdown 1`] = `
"<div id="pending-X" class="pending-changes-wrapper anim-bubble-in" data-actor="pending">
      <div class="pending-container">
        <div class="pending-header">
          <span class="pending-icon">▶</span>
          <span class="pending-title">Pending Changes</span>
          <span class="pending-count">1</span>
        </div>
        <div class="pending-body">
          
      <div class="pending-item" id="pending-X" data-status="pending" data-superseded="false">
        <span class="pending-status pending">●</span>
        <span class="pending-file" title="/src/file.ts">file.ts</span>
        
        <div class="pending-actions">
          <button class="pending-btn accept-btn" title="Accept changes">✓</button>
          <button class="pending-btn reject-btn" title="Reject changes">✕</button>
        </div>
      
      </div>
    
        </div>
      </div>
    </div>"
`;

exports[`PendingChangesActor Snapshots > empty state > renders empty when no files 1`] = `""`;

exports[`PendingChangesActor Snapshots > injected styles > injects styles into document head 1`] = `
"
/* Pending Changes Wrapper (outer container from InterleavedContentActor) */
.pending-changes-wrapper {
  position: relative;
  z-index: 1;  /* Ensure pending files appears above animation effects like printing-surface */
}

/* Pending Changes Container */
.pending-container {
  margin: 8px 0;
  border: 1px solid var(--vscode-panel-border);
  border-radius: 6px;
  overflow: hidden;
  background: var(--vscode-editor-background);
}

.pending-container.entering {
  animation: pendingSlideIn 0.2s ease-out;
}

@keyframes pendingSlideIn {
  from {
    opacity: 0;
    transform: translateY(-10px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

/* Pending Header */
.pending-header {
  display: flex;
  align-items: center;
  gap: 8px;
  padding: 8px 12px;
  background: var(--vscode-editorWidget-background);
  cursor: pointer;
  user-select: none;
  transition: background 0.15s ease;
}

.pending-header:hover {
  background: var(--vscode-list-hoverBackground);
}

.pending-icon {
  font-size: 10px;
  color: var(--vscode-foreground);
  transition: transform 0.2s ease;
}

.pending-container.expanded .pending-icon {
  transform: rotate(90deg);
}

.pending-title {
  flex: 1;
  font-size: 12px;
  font-weight: 500;
  color: var(--vscode-foreground);
}

.pending-count {
  background: var(--vscode-badge-background);
  color: var(--vscode-badge-foreground);
  padding: 2px 6px;
  border-radius: 10px;
  font-size: 10px;
  font-weight: 500;
}

/* Pending Body */
.pending-body {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.3s ease, padding 0.3s ease;
}

.pending-container.expanded .pending-body {
  max-height: 500px;
  padding: 8px 12px;
  overflow-y: auto;
}

/* Pending Item */
.pending-item {
  display: flex;
  align-items: center;
  gap: 8px;
  padding: 6px 0;
  border-bottom: 1px solid var(--vscode-panel-border);
}

.pending-item:last-child {
  border-bottom: none;
}

.pending-status {
  width: 16px;
  text-align: center;
  flex-shrink: 0;
}

.pending-status.pending {
  color: var(--vscode-editorWarning-foreground, #cca700);
}

.pending-status.applied {
  color: var(--vscode-terminal-ansiGreen);
}

.pending-status.rejected {
  color: var(--vscode-errorForeground, #f48771);
}

.pending-status.superseded {
  color: var(--vscode-textLink-foreground, #3794ff);
}

/* File name */
.pending-file {
  flex: 1;
  font-family: var(--vscode-editor-font-family);
  font-size: 12px;
  color: var(--vscode-textLink-foreground);
  cursor: pointer;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.pending-file:hover {
  text-decoration: underline;
}

.pending-file.no-click {
  cursor: default;
  color: var(--vscode-descriptionForeground);
}

.pending-file.no-click:hover {
  text-decoration: none;
}

/* Actions */
.pending-actions {
  display: flex;
  gap: 4px;
  flex-shrink: 0;
}

.pending-btn {
  width: 24px;
  height: 24px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 12px;
  transition: filter 0.15s ease;
}

.pending-btn.accept-btn {
  background: var(--vscode-terminal-ansiGreen, #4ec9b0);
  color: var(--vscode-editor-background);
}

.pending-btn.accept-btn:hover {
  background: var(--vscode-terminal-ansiBrightGreen, #5fd7af);
}

.pending-btn.reject-btn {
  background: var(--vscode-errorForeground, #f48771);
  color: var(--vscode-editor-background);
}

.pending-btn.reject-btn:hover {
  filter: brightness(1.15);
}

/* Status labels */
.pending-label {
  font-size: 10px;
  font-weight: 500;
  padding: 2px 6px;
  border-radius: 4px;
}

.pending-label.applied {
  background: var(--vscode-terminal-ansiGreen);
  color: var(--vscode-editor-background);
}

.pending-label.rejected {
  background: var(--vscode-errorForeground, #f48771);
  color: var(--vscode-editor-background);
}

.pending-label.superseded {
  background: var(--vscode-textLink-foreground, #3794ff);
  color: var(--vscode-editor-background);
}

.pending-label.auto {
  background: var(--vscode-terminal-ansiGreen);
  color: var(--vscode-editor-background);
}

/* Auto mode styling */
.pending-container.auto-mode .pending-item {
  padding: 4px 0;
}

/* Superseded items */
.pending-item[data-superseded="true"] {
  opacity: 0.6;
}

.pending-item[data-superseded="true"] .pending-file {
  text-decoration: line-through;
  color: var(--vscode-descriptionForeground);
}

.pending-item[data-superseded="true"] .pending-status {
  color: var(--vscode-descriptionForeground);
}
"
`;

exports[`PendingChangesActor Snapshots > manual mode > renders empty in manual mode 1`] = `""`;

exports[`PendingChangesActor State Snapshots > captures initial state 1`] = `
{
  "editMode": "ask",
  "expanded": true,
  "files": [],
}
`;

exports[`PendingChangesActor State Snapshots > captures state after accept 1`] = `
{
  "editMode": "ask",
  "expanded": true,
  "files": [
    {
      "diffId": undefined,
      "fileName": "file.ts",
      "filePath": "/src/file.ts",
      "id": "pending-X",
      "iteration": 1,
      "status": "applied",
      "superseded": false,
    },
  ],
}
`;

exports[`PendingChangesActor State Snapshots > captures state with files 1`] = `
{
  "editMode": "ask",
  "expanded": true,
  "files": [
    {
      "diffId": undefined,
      "fileName": "index.ts",
      "filePath": "/src/index.ts",
      "id": "pending-X",
      "iteration": 1,
      "status": "pending",
      "superseded": false,
    },
    {
      "diffId": undefined,
      "fileName": "utils.ts",
      "filePath": "/src/utils.ts",
      "id": "pending-X",
      "iteration": 1,
      "status": "pending",
      "superseded": false,
    },
  ],
}
`;
